HU05 ready with validations and tests